--- a/app/build.gradle
+++ b/app/build.gradle
@@ -28,6 +28,7 @@ dependencies {
     androidTestImplementation 'androidx.test.espresso:espresso-core:3.1.1'
 
 
+    implementation 'com.android.support:design:29.1.0'
     implementation 'jp.wasabeef:glide-transformations:4.0.0'
     implementation 'de.hdodenhof:circleimageview:3.0.2'
     implementation 'com.android.support:cardview-v7:29.0.0'
